org.omg.kerml.xpect.tests/src/org/omg/kerml/xpect/tests/failing/ShadowingTests_SameNamesBadCase_Redef.kerml.xt
//* 
XPECT_SETUP org.omg.kerml.xpect.tests.testsuite.KerMLXtextTest
	ResourceSet {
		ThisFile {}
		File {from ="/library/Base.kerml"}
	}
	Workspace {
		JavaProject {
			SrcFolder {
				ThisFile {}
				File {from ="/library/Base.kerml"}
			}
		}
	}
END_SETUP 
*/

package test{
	feature A{
		feature a1{}
	}
	feature B redefines A{
		feature A{
			feature a2{}
		}
		//* XPECT errors ---
		 "Couldn't resolve reference to Feature 'A::a1'." at "A::a1"
		 "The feature 'type' of 'org.omg.sysml.lang.sysml.impl.FeatureImpl@6f3e19b3file:/C:/<install_dir>/org.omg.sysml.xpect.tests/src/org/omg/sysml/xpect/tests/validation/aa_ShadowingTests_SameNamesBadCase_Redef.kerml.xt#//@ownedRelationship.1/@ownedRelatedElement.0/@ownedRelationship.2/@ownedRelatedElement.0}' with 0 values must have at least 1 values" at "b redefines A::a1{}"
		--- */
		feature b redefines A::a1{}
	}
}
